--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
-theme: jekyll-theme-cayman
-title: The Cove
-description: Bookmark this to keep an eye on my project updates!
+lsi: false
+safe: true
+source: https:magolol.github.io
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
