--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ nav:
         - 'Full Guide Part One': 'switchguide.md'
         - 'Switch frii': 'switchfrii.md'
         - 'Switch Ban Protection': 'switchbanprotection.md'
+        - 'Getting started': 'gettingstarted.md'
+    
 theme:
   name: null
   custom_dir: 'cinder'
